# SYNAXIM

./: .gitignore  LICENSE  README.md  convert_and_push.py  finetune_symbiotic.py  pyproject.toml  train_adapter.py
__marimo__/session/: finetune_symbiotic.py.json
examples/: chat_example.py  convert_huggingface.py  quickstart.py  serve_openai_api.py
grrn_inference/: __init__.py  cli.py  config.py  cpu_engine.py  cpu_kernels.py  engine.py  export.py  sampling.py  server.py  tokenizer.py  triton_kernels.py
grrn_inference/models/: __init__.py  dense.py  moe.py  registry.py
tests/: test_engine.py  test_export.py
