[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grrn-inference"
version = "0.1.0"
description = "SYNAXIM — Symbiotic Native Axiom Inference Machine | Framework-free LLM inference by GRRNMAKER"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "GRRNMAKER"},
]
keywords = ["synaxim", "inference", "llm", "symbiotic", "int4", "quantization", "transformer-free"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "safetensors>=0.4",
    "sentencepiece>=0.1.99",
    "tiktoken>=0.5",
    "tqdm>=4.65",
    "huggingface-hub>=0.20",
    "tokenizers>=0.15",
]

[project.optional-dependencies]
cpu = ["numba>=0.59"]
gpu = ["triton>=2.2", "torch>=2.1"]
server = ["fastapi>=0.100", "uvicorn>=0.23", "pydantic>=2.0"]
all = ["grrn-inference[cpu,gpu,server]"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/GRRN-MAKER/SYNAXIM"
Documentation = "https://github.com/GRRN-MAKER/SYNAXIM/tree/main/docs"
Repository = "https://github.com/GRRN-MAKER/SYNAXIM"
Issues = "https://github.com/GRRN-MAKER/SYNAXIM/issues"

[project.scripts]
grrn-convert = "grrn_inference.cli:convert_cli"
grrn-serve = "grrn_inference.cli:serve_cli"

[tool.setuptools.packages.find]
include = ["grrn_inference*"]

[tool.ruff]
line-length = 100
target-version = "py39"
